add more projects

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -91,7 +91,7 @@
         <div class="portfolio-content">
             <h2 id="athens-bus-chatbot">Athens Bus Chatbot</h2>
 
-<p>&ldquo;Πότε έρχεται το λεωφορείο μου&rdquo;</p>
+<p><strong>Πότε έρχεται το λεωφορείο μου;</strong></p>
 
 <p>A Facebook Chatbot helping over 20.000 people per week in Athens, Greece with their daily commute.</p>
 
@@ -115,17 +115,19 @@
     <div class="portfolio-inner">
         <div class="portfolio-image"><img src="/images/bot-logo.png" alt="AthensBus Logo"></div>
         <div class="portfolio-content">
-            <h2 id="ebony-the-easy-bot-node-framework">EBONy : the Easy BOt Node Framework</h2>
+            <h2 id="ebony">EBONy</h2>
 
-<p>A module based NodeJS framework for easy and painless development of Facebook Chatbots.</p>
+<p><strong>the Easy BOt Node Framework</strong></p>
 
-<p>Check out more on <a href="https://github.com/chrispanag/ebony">Github</a>.</p>
+<p>A module-based NodeJS framework for easy and painless development of Facebook Chatbots.</p>
+
+<p>Check out more on <a href="https://github.com/chrispanag/ebony">Github</a> or on <a href="https://www.npmjs.com/package/ebony-framework">npm</a>.</p>
 
         </div>
 	</div>
 </div>
 
-<hr />
+<p>You can see more of my projects on my <a href="https://github.com/chrispanag"><strong>Github profile</strong></a>.</p>
 
   </article>
 </section>
