add more projects

--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
 
     <meta name="author" content="Christos Panagiotakopoulos">
     <meta name="description" content="Christos&#39; personal website">
-    <meta name="keywords" content="blog,developer,personal,chatbots,engineer,backend">
+    <meta name="keywords" content="blog,developer,personal,chatbots,engineer,backend,frontend,facebook,bots,ebony,ebony-framework,node,nodejs,javascript,typescript,greece,athens">
     
     <meta property="og:site_name" content="Christos Panagiotakopoulos">
     <meta property="og:title" content="Christos Panagiotakopoulos">
