--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -101,11 +101,18 @@
 
 <p><strong>Πότε έρχεται το λεωφορείο μου;</strong></p>
 
-<p>A Facebook Chatbot helping over 20.000 people per week in Athens, Greece with their daily commute.</p>
+<p>A Facebook Chatbot helping over 50.000 people per week, in Athens, Greece with their daily commute.</p>
 
 <p>It was the first Greek chatbot and it&rsquo;s now the biggest in terms of usage and unique user count in Greece.</p>
 
 <p>Check out more on <a href="https://facebook.com/athensbus">the Facebook page</a>, or <a href="https://m.me/athensbus">talk to it</a> directly (only in greek for now 😢).</p>
+
+<p>References:</p>
+
+<ul>
+<li><a href="https://www.iefimerida.gr/ellada/pote-erhetai-leoforeio-22hronos-eftiaxe-efarmogi">&ldquo;«Πότε έρχεται το λεωφορείο;»: 22χρονος έφτιαξε εφαρμογή που θα λατρέψετε&rdquo; - iefimerida.gr</a></li>
+<li><a href="http://newpost.gr/ellada/692249/efarmogh-gia-dromologia-lewforeiwn-stelnei-stoys-epibates-kardoyles-kai-erwtologa">&ldquo;Εφαρμογή για δρομολόγια λεωφορείων στέλνει στους επιβάτες καρδούλες και ερωτόλογα!&rdquo; - newpost.gr</a></li>
+</ul>
 
         </div>
 	</div>
